--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -18,12 +18,12 @@
   <tbody>
     <% @arts.each do |art| %>
       <tr>
-        <td><%= art.artist %></td>
+        <td><%= link_to art.artist.name, artist_path(art.artist) %></td>
         <td><%= art.title %></td>
         <td><%= art.year %></td>
-        <td><%= art.image_url %></td>
-        <td><%= art.location_url %></td>
-        <td><%= art.view_url %></td>
+        <td><%= link_to "Google Arts & Culture", art.image_url, :target=>["_blank"] %></td>
+        <td><%= link_to "Location", art.location_url, :target=>["_blank"] %></td>
+        <td><%= link_to "Street View", art.view_url, :target=>["_blank"] %></td>
         <td><%= link_to 'Show', art %></td>
         <td><%= link_to 'Edit', edit_art_path(art) %></td>
         <td><%= link_to 'Destroy', art, method: :delete, data: { confirm: 'Are you sure?' } %></td>
