--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -20,5 +20,18 @@
   <%= @artist.death %>
 </p>
 
+<p>
+  <strong>作品一覧</strong>
+</p>
+<p>
+  <% @artist.arts.each do |art| %>
+    <strong><%= link_to art.title, art_path(art) %></strong> <br>
+    <%= art.year %> <br>
+    <%= link_to "Google Arts & Culture", art.image_url, :target=>["_blank"] %> <br>
+    <%= link_to "Location", art.location_url, :target=>["_blank"] %> <br>
+    <%= link_to "Street View", art.view_url, :target=>["_blank"] %> <br>
+  <% end %>
+</p>
+
 <%= link_to 'Edit', edit_artist_path(@artist) %> |
 <%= link_to 'Back', artists_path %>
