--- a/app/views/arts/show.html.erb
+++ b/app/views/arts/show.html.erb
@@ -28,6 +28,11 @@
 </p>
 
 <p>
+  <strong>Image:</strong>
+  <%= image_tag @art.image.to_s %>
+</p>
+
+<p>
   <strong>Image url:</strong>
   <%= link_to "Google Arts & Culture", @art.image_url, :target=>["_blank"] %>
 </p>
