--- a/app/views/arts/_form.html.erb
+++ b/app/views/arts/_form.html.erb
@@ -27,18 +27,23 @@
   </div>
 
   <div class="field">
-    <%= form.label :image %>
-    <%= form.file_field :image %>
-  </div>
-
-  <div class="field">
     <%= form.label :image_url %>
     <%= form.text_field :image_url %>
   </div>
 
   <div class="field">
+    <%= form.label :image %>
+    <%= form.file_field :image %>
+  </div>
+
+  <div class="field">
     <%= form.label :location_url %>
     <%= form.text_field :location_url %>
+  </div>
+
+  <div class="field">
+    <%= form.label :address %>
+    <%= form.text_field :address %>
   </div>
 
   <div class="field">
