--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -13,9 +13,12 @@
       <th>Artist</th>
       <th>Country</th>
       <th>Birth & Death</th>
-      <th>Image</th>
       <th>Image url</th>
+      <th>Image</th>
       <th>Location url</th>
+      <th>address</th>
+      <th>latitude</th>
+      <th>longitude</th>
       <th>View url</th>
       <th colspan="3"></th>
     </tr>
@@ -29,9 +32,12 @@
         <td><%= link_to art.artist.name, artist_path(art.artist) %></td>
         <td><%= art.artist.country %></td>
         <td><%= art.artist.birth %> - <%= art.artist.death %></td>
-        <td><%= image_tag art.image.to_s %></td>
         <td><%= link_to "Google Arts & Culture", art.image_url, :target=>["_blank"] %></td>
+        <td><%= image_tag art.image.to_s %></td>
         <td><%= link_to "Location", art.location_url, :target=>["_blank"] %></td>
+        <td><%= art.address %></td>
+        <td><%= art.latitude %></td>
+        <td><%= art.longitude %></td>
         <td><%= link_to "Street View", art.view_url, :target=>["_blank"] %></td>
         <td><%= link_to 'Show', art %></td>
         <td><%= link_to 'Edit', edit_art_path(art) %></td>
