multiple pins on google map done except infowindow

--- a/app/views/arts/show.html.erb
+++ b/app/views/arts/show.html.erb
@@ -9,7 +9,7 @@
         var transitLayer = new google.maps.TransitLayer();
         transitLayer.setMap(map);
 
-        var contentString = '住所：<%= @address %>';
+        var contentString = 'Address: <%= @address %>';
         var infowindow = new google.maps.InfoWindow({
             content: contentString
         });
