--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -1,3 +1,44 @@
+<script type="text/javascript">
+  var contentString;
+  var infoWindow;
+  var position;
+  var marker;
+  function initMap() {
+
+      var cecnter = {lat: <%= @latitudes.inject(:+)/@latitudes.size %>, lng: <%= @longitudes.inject(:+)/@longitudes.size %>};
+      var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 6,
+          center: cecnter
+      });
+      var transitLayer = new google.maps.TransitLayer();
+      transitLayer.setMap(map);
+
+      <% @arts.each do |art| %>
+        contentString = '<%= art.address %>';
+        infoWindow = new google.maps.InfoWindow({
+            content: contentString
+        });
+
+        position = {
+          lat: <%= art.latitude %>,
+          lng: <%= art.longitude %>
+        }
+        marker = new google.maps.Marker({
+            position:position,
+            map: map,
+            title: contentString
+        });
+
+        marker.addListener('click', function() { // マーカーをクリックしたとき
+          infoWindow.open(map, marker); // 吹き出しの表示
+        });
+      <% end %>
+  }
+</script>
+<script async defer
+        src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=<%= ENV["GOOGLE_MAPS_API_KEY"] %>&callback=initMap">
+</script>
+
 <p id="notice"><%= notice %></p>
 <h1>
   My Favorite Paintings' Location & Street View
@@ -50,3 +91,12 @@
 <br>
 
 <%= link_to 'New Art', new_art_path %>
+
+<style type="text/css">
+  #map { height: 400px;
+    margin-left:auto;
+    margin-right:auto;
+    text-align:left;
+    width: 80%;}
+</style>
+<div id="map"></div>
