--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -5,7 +5,7 @@
   var marker;
   function initMap() {
 
-      var cecnter = {lat: <%= @latitudes.inject(:+)/@latitudes.size %>, lng: <%= @longitudes.inject(:+)/@longitudes.size %>};
+      var cecnter = {lat: <%= @arts.average(:latitude) %>, lng: <%= @arts.average(:longitude) %>};
       var map = new google.maps.Map(document.getElementById('map'), {
           zoom: 6,
           center: cecnter
@@ -14,24 +14,30 @@
       transitLayer.setMap(map);
 
       <% @arts.each do |art| %>
-        contentString = '<%= art.address %>';
-        infoWindow = new google.maps.InfoWindow({
-            content: contentString
-        });
+        <% unless art.address == '' %>
+        <% unless art.latitude == 'nil' %>
+        <% unless art.longitude == 'nil' %>
+          contentString = '<%= art.address %>';
+          infoWindow = new google.maps.InfoWindow({
+              content: contentString
+          });
 
-        position = {
-          lat: <%= art.latitude %>,
-          lng: <%= art.longitude %>
-        }
-        marker = new google.maps.Marker({
-            position:position,
-            map: map,
-            title: contentString
-        });
+          position = {
+            lat: <%= art.latitude %>,
+            lng: <%= art.longitude %>
+          }
+          marker = new google.maps.Marker({
+              position:position,
+              map: map,
+              title: contentString
+          });
 
-        marker.addListener('click', function() { // マーカーをクリックしたとき
-          infoWindow.open(map, marker); // 吹き出しの表示
-        });
+          marker.addListener('click', function() { // マーカーをクリックしたとき
+            infoWindow.open(map, marker); // 吹き出しの表示
+          });
+        <% end %>
+        <% end %>
+        <% end %>
       <% end %>
   }
 </script>
