--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -52,47 +52,25 @@
 
 <h2>Paintings</h2>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Year</th>
-      <th>Artist</th>
-      <th>Country</th>
-      <th>Birth & Death</th>
-      <th>Image url</th>
-      <th>Image</th>
-      <th>Location url</th>
-      <th>address</th>
-      <th>latitude</th>
-      <th>longitude</th>
-      <th>View url</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @arts.each do |art| %>
-      <tr>
-        <td><%= art.title %></td>
-        <td><%= art.year %></td>
-        <td><%= link_to art.artist.name, artist_path(art.artist) %></td>
-        <td><%= art.artist.country %></td>
-        <td><%= art.artist.birth %> - <%= art.artist.death %></td>
-        <td><%= link_to "Google Arts & Culture", art.image_url, :target=>["_blank"] %></td>
-        <td><%= image_tag art.image.to_s %></td>
-        <td><%= link_to "Location", art.location_url, :target=>["_blank"] %></td>
-        <td><%= art.address %></td>
-        <td><%= art.latitude %></td>
-        <td><%= art.longitude %></td>
-        <td><%= link_to "Street View", art.view_url, :target=>["_blank"] %></td>
-        <td><%= link_to 'Show', art %></td>
-        <td><%= link_to 'Edit', edit_art_path(art) %></td>
-        <td><%= link_to 'Destroy', art, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<% @arts.each do |art| %>
+    <%= image_tag art.image.to_s %> <br>
+    <%= link_to art.title, art %> <br>
+    <%= art.year %> <br>
+    <%= link_to art.artist.name, artist_path(art.artist) %> <br>
+    <%= art.artist.country %> <br>
+    <%= art.artist.birth %> - <%= art.artist.death %> <br>
+    <%= link_to "Google Arts & Culture", art.image_url, :target=>["_blank"] %> <br>
+    <%= link_to "Location", art.location_url, :target=>["_blank"] %> <br>
+    <%= art.address %> <br>
+    <%= art.latitude %> <br>
+    <%= art.longitude %> <br>
+    <%= link_to "Street View", art.view_url, :target=>["_blank"] %> <br>
+    <%= link_to 'Show', art %> <br>
+    <%= link_to 'Edit', edit_art_path(art) %> <br>
+    <%= link_to 'Destroy', art, method: :delete, data: { confirm: 'Are you sure?' } %> <br>
+    <br>
+<% end %>
 
 <br>
 
