image_url=>image_link

--- a/app/views/arts/_form.html.erb
+++ b/app/views/arts/_form.html.erb
@@ -29,8 +29,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :image_url %>
-    <%= form.text_field :image_url %>
+    <%= form.label :image_link %>
+    <%= form.text_field :image_link %>
   </div>
 
   <div class="field">
@@ -39,8 +39,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :location_url %>
-    <%= form.text_field :location_url %>
+    <%= form.label :location_link %>
+    <%= form.text_field :location_link %>
   </div>
 
   <div class="field">
@@ -49,8 +49,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :view_url %>
-    <%= form.text_field :view_url %>
+    <%= form.label :view_link %>
+    <%= form.text_field :view_link %>
   </div>
 
   <div class="actions">
