--- a/app/views/arts/show.html.erb
+++ b/app/views/arts/show.html.erb
@@ -63,13 +63,13 @@
 </p>
 
 <p>
-  <strong>Image url:</strong>
-  <%= link_to "Google Arts & Culture", @art.image_url, :target=>["_blank"] %>
+  <strong>Image link:</strong>
+  <%= link_to "Google Arts & Culture", @art.image_link, :target=>["_blank"] %>
 </p>
 
 <p>
-  <strong>Location url:</strong>
-  <%= link_to "Location", @art.location_url, :target=>["_blank"] %>
+  <strong>Location link:</strong>
+  <%= link_to "Location", @art.location_link, :target=>["_blank"] %>
 </p>
 
 <p>
@@ -83,8 +83,8 @@
 </p>
 
 <p>
-  <strong>View url:</strong>
-  <%= link_to "Street View", @art.view_url, :target=>["_blank"] %>
+  <strong>View link:</strong>
+  <%= link_to "Street View", @art.view_link, :target=>["_blank"] %>
 </p>
 
 <style type="text/css">
