--- a/app/views/arts/edit.html.erb
+++ b/app/views/arts/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing Art</h1>
+<div class="container-fluid">
+  <div class="row">
+    <h1 class="col-lg-6 offset-lg-2">Edit Art</h1>
+  </div>
+</div>
+<br>
 
 <%= render 'form', art: @art %>
-
-<%= link_to 'Show', @art %> |
-<%= link_to 'Back', arts_path %>
