--- a/app/views/arts/new.html.erb
+++ b/app/views/arts/new.html.erb
@@ -1,5 +1,12 @@
-<h1>New Art</h1>
+<div class="container-fluid">
+  <div class="row">
+    <h1 class="col-lg-6 offset-lg-2">New Art</h1>
+  </div>
+</div>
+<br>
 
 <%= render 'form', art: @art %>
 
-<%= link_to 'Back', arts_path %>
+<div class="container-fluid">
+  
+</div>
