--- a/app/views/artists/_form.html.erb
+++ b/app/views/artists/_form.html.erb
@@ -35,3 +35,22 @@
     <%= form.submit %>
   </div>
 <% end %>
+<br>
+<%= simple_form_for @artist,
+  wrapper: :horizontal_form,
+  wrapper_mappings: {
+    boolean:       :horizontal_boolean,
+    check_boxes:   :horizontal_collection,
+    date:          :horizontal_multi_select,
+    datetime:      :horizontal_multi_select,
+    file:          :horizontal_file,
+    radio_buttons: :horizontal_collection,
+    range:         :horizontal_range,
+    time:          :horizontal_multi_select
+  } do |f| %>
+  <%= f.input :name %>
+  <%= f.input :country, as: :string %>
+  <%= f.input :birth %>
+  <%= f.input :death %>
+  <%= f.button :submit %>
+<% end %>
