--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -52,32 +52,28 @@
 <p id="notice"><%= notice %></p>
 
 
-<div class="container">
+<div class="container-fluid" style="width:90%;">
   <div class="row">
-    <div class="col-md-11" style="font-size:30px;">
+    <div class="col-lg-9" style="font-size:30px;">
       My Favorite Paintings' Location & Street View
     </div>
-    <%= link_to 'New Art', new_art_path, class: "col-md-1", class: "btn btn-outline-primary" %>
-  </div>
-</div>
+    <%= link_to 'New Art', new_art_path, class: "col-lg-1 offset-lg-2 btn btn-outline-primary", style: "width:100px;" %>
 
-<br>
 
-<style type="text/css">
-  #map { height: 400px;
-    margin-left:auto;
-    margin-right:auto;
-    text-align:left;
-    width: 80%;}
-</style>
-<div id="map"></div>
 
-<br>
+    <style type="text/css">
+      #map { height: 400px;
+        margin-left:auto;
+        margin-right:auto;
+        margin-top:20px;
+        margin-bottom:40px;
+        text-align:left;
+        width: 100%;}
+    </style>
+    <div id="map"></div>
 
-<div class="container">
-  <div class="row">
     <% @arts.each do |art| %>
-      <div class="col-md-4">
+      <div class="col-lg-4">
         <div class="card mb-4 shadow-sm">
           <%= link_to art, style: "background-color: white;" do %>
             <%= image_tag art.image.to_s, class: "card-img-top" %>
@@ -113,7 +109,7 @@
 
 <div class="container">
   <div class="row">
-    <%= link_to 'New Art', new_art_path, class: "col-md-12", class: "btn btn-outline-primary", style: "margin: 0 auto;" %>
+    <%= link_to 'New Art', new_art_path, class: "col-lg-12", class: "btn btn-outline-primary", style: "margin: 0 auto;" %>
   </div>
 </div>
 <br>
