--- a/app/views/artists/new.html.erb
+++ b/app/views/artists/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New Artist</h1>
+<div class="container-fluid">
+  <div class="row">
+    <h1 class="col-lg-6 offset-lg-2">New Artist</h1>
+  </div>
+</div>
+<br>
 
 <%= render 'form', artist: @artist %>
-
-<%= link_to 'Back', artists_path %>
