--- a/app/views/arts/_form.html.erb
+++ b/app/views/arts/_form.html.erb
@@ -85,7 +85,7 @@
     <div class="form-group row">
       <div class="col-lg-6 offset-lg-3">
         <%= form.submit class: "col-lg-2 btn btn-outline-primary" %>
-        <%= link_to 'Back', arts_path, class: "col-lg-2 btn btn-outline-secondary", style: "text-decoration:none;" %>
+        <%= link_to 'Home', arts_path, class: "col-lg-2 btn btn-outline-secondary", style: "text-decoration:none;" %>
       </div>
     </div>
   <% end %>
