--- a/app/views/artists/new.html.erb
+++ b/app/views/artists/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row">
-    <h1 class="col-lg-6 offset-lg-2">New Artist</h1>
+    <h1 class="col-lg-6 offset-lg-2">Add Artist</h1>
   </div>
 </div>
 <br>
