--- a/app/views/artists/_form.html.erb
+++ b/app/views/artists/_form.html.erb
@@ -50,7 +50,7 @@
 
     <div class="form-group row">
       <div class="col-lg-6 offset-lg-3">
-        <%= form.submit class: "col-lg-2 btn btn-outline-primary" %>
+        <%= form.submit "Add Artist",  class: "col-lg-2 btn btn-outline-primary" %>
         <%= link_to 'Back', new_art_path, class: "col-lg-2 btn btn-outline-secondary", style: "text-decoration:none;" %>
       </div>
     </div>
