--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -97,7 +97,7 @@
 
 <div class="container">
   <div class="row">
-    <%= link_to 'New Art', new_art_path, class: "col-lg-12", class: "btn btn-outline-primary", style: "margin: 0 auto;" %>
+    <%= link_to 'Post Painting', new_art_path, class: "col-lg-12", class: "btn btn-outline-primary", style: "margin: 0 auto;" %>
   </div>
 </div>
 <br>
@@ -141,7 +141,7 @@
 
 <div class="container">
   <div class="row">
-    <%= link_to 'New Art', new_art_path, class: "col-lg-12", class: "btn btn-outline-primary", style: "margin: 0 auto;" %>
+    <%= link_to 'Post Painting', new_art_path, class: "col-lg-12", class: "btn btn-outline-primary", style: "margin: 0 auto;" %>
   </div>
 </div>
 <br>
