--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -102,7 +102,7 @@
 
 <div class="container">
   <div class="row">
-    <%= link_to 'New Art', new_art_path, class: "col-lg-12", class: "btn btn-outline-primary", style: "margin: 0 auto;" %>
+    <%= link_to 'Post Painting', new_art_path, class: "col-lg-12", class: "btn btn-outline-primary", style: "margin: 0 auto;" %>
   </div>
 </div>
 <br>
@@ -146,7 +146,7 @@
 
 <div class="container">
   <div class="row">
-    <%= link_to 'New Art', new_art_path, class: "col-lg-12", class: "btn btn-outline-primary", style: "margin: 0 auto;" %>
+    <%= link_to 'Post Painting', new_art_path, class: "col-lg-12", class: "btn btn-outline-primary", style: "margin: 0 auto;" %>
   </div>
 </div>
 <br>
