--- a/app/views/arts/new.html.erb
+++ b/app/views/arts/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row">
-    <h1 class="col-lg-6 offset-lg-2">New Art</h1>
+    <h1 class="col-lg-6 offset-lg-2">Post Painting</h1>
   </div>
 </div>
 <br>
