--- a/app/views/artists/new.html.erb
+++ b/app/views/artists/new.html.erb
@@ -6,3 +6,11 @@
 <br>
 
 <%= render 'form', artist: @artist %>
+
+<div class="container-fluid">
+  <div class="form-group row">
+    <div class="col-lg-6 offset-lg-3">
+      <%= link_to 'Back', new_art_path, class: "col-lg-2 btn btn-outline-secondary", style: "text-decoration:none;" %>
+    </div>
+  </div>  
+</div>
