--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -72,12 +72,16 @@
       </div>
     </div>
 
-    <div class="col-sm-2">
+    <div class="col-sm-2" style="margin-top:7px;">
       <%= @artist.country %>
     </div>
 
-    <div class="col-sm-3">
+    <div class="col-sm-2" style="margin-top:7px;">
       <%= @artist.birth %> - <%= @artist.death %>
+    </div>
+
+    <div class="col-sm-2" style="margin-top:7px;">
+      <%= link_to 'Edit', edit_artist_path(@artist), style: "color:gray; text-decoration:none;"  %>
     </div>
   </div>
 
@@ -105,7 +109,7 @@
 <div class="container-fluid" style="width:90%;">
   <div class="row">
     <% @arts.each do |art| %>
-      <div class="col-lg-4">
+      <div class="col-lg-4" style="margin-top:20px;">
         <div class="card mb-4 shadow-sm">
           <%= link_to art, style: "background-color: white;" do %>
             <%= image_tag art.image.to_s, class: "card-img-top" %>
@@ -125,13 +129,13 @@
             <%= link_to "Google Maps", art.location_link, :target=>["_blank"], style: "text-decoration: none;" %>　
             <%= link_to "Street View", art.view_link, :target=>["_blank"], style: "text-decoration: none;" %>
             <br>
-            <div class="d-flex justify-content-between align-items-center" style="margin-top:10px;">
+            <!-- <div class="d-flex justify-content-between align-items-center" style="margin-top:10px;">
               <div class="btn-group">
                 <%= link_to 'Show', art, class: "btn btn-sm btn-outline-secondary" %>
                 <%= link_to 'Edit', edit_art_path(art), class: "btn btn-sm btn-outline-secondary" %>
                 <%= link_to 'Destroy', art, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-sm btn-outline-secondary" %>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -141,11 +145,16 @@
 
 <div class="container">
   <div class="row">
-    <%= link_to 'Post Painting', new_art_path, class: "col-lg-12", class: "btn btn-outline-primary", style: "margin: 0 auto;" %>
+    <button id="pagetop" class="btn btn-outline-primary" style="margin: 0 auto;">to Page Top</button>
   </div>
 </div>
 <br>
 
-
-<%= link_to 'Edit', edit_artist_path(@artist) %> |
-<%= link_to 'Back', artists_path %>
+<script type="text/javascript">
+  $(function(){
+      $('#pagetop').click(function () {
+          //id名#pagetopがクリックされたら、以下の処理を実行
+          $("html,body").animate({scrollTop:0},"300");
+      });
+  });
+</script>
