--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -64,8 +64,8 @@
 
 <div class="container-fluid" style="width:90%;">
   <div class="row">
-    <div class="col-lg-12" style="font-size:30px;">
-      My Favorite Paintings' Location & Street View
+    <div class="col-lg-12">
+      <h1>My Favorite Paintings' Location & Street View</h1>
     </div>
   </div>
 
@@ -110,7 +110,7 @@
 <div class="container-fluid" style="width:90%;">
   <div class="row">
     <% @arts.each do |art| %>
-      <div class="col-lg-4">
+      <div class="col-lg-4" style="margin-top:20px;">
         <div class="card">
           <%= link_to art do %>
             <%= image_tag art.image.to_s, class: "card-img-top" %>
@@ -130,13 +130,13 @@
             <%= link_to "Google Maps", art.location_link, :target=>["_blank"], style: "text-decoration: none;" %>　
             <%= link_to "Street View", art.view_link, :target=>["_blank"], style: "text-decoration: none;" %>
             <br>
-            <div class="d-flex justify-content-between align-items-center" style="margin-top:10px;">
+            <!-- <div class="d-flex justify-content-between align-items-center" style="margin-top:10px;">
               <div class="btn-group">
                 <%= link_to 'Show', art, class: "btn btn-sm btn-outline-secondary" %>
                 <%= link_to 'Edit', edit_art_path(art), class: "btn btn-sm btn-outline-secondary" %>
                 <%= link_to 'Destroy', art, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-sm btn-outline-secondary" %>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -144,9 +144,20 @@
   </div>
 </div>
 
+<br>
+
 <div class="container">
   <div class="row">
-    <%= link_to 'Post Painting', new_art_path, class: "col-lg-12", class: "btn btn-outline-primary", style: "margin: 0 auto;" %>
+    <button id="pagetop" class="btn btn-outline-primary" style="margin: 0 auto;">to Page Top</button>
   </div>
 </div>
 <br>
+
+<script type="text/javascript">
+  $(function(){
+      $('#pagetop').click(function () {
+          //id名#pagetopがクリックされたら、以下の処理を実行
+          $("html,body").animate({scrollTop:0},"300");
+      });
+  });
+</script>
