--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -50,7 +50,7 @@
 <div class="container-fluid" style="width:90%;">
   <div class="row">
     <div class="col-lg-12" style="font-size:30px;">
-      My Favorite Paintings' Location & Street View
+      <h1>My Favorite Paintings' Location & Street View</h1>
     </div>
   </div>
 
