--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -73,18 +73,20 @@
 
   <div class="row">
     <div class="btn-group col-sm-3">
-      <button type="button" class="btn btn-outline-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <button type="button" class="btn btn-outline-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="font-size:20px;">
         All Artists
       </button>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
         <% @artists.each do |artist| %>
-          <%= link_to artist.name, artist_path(artist), class: "dropdown-item" %>
+          <%= link_to artist.name, artist_path(artist), class: "dropdown-item", style:"font-size:25px;" %>
         <% end %>
         <div class="dropdown-divider"></div>
-        <%= link_to "All Artists", root_path, class: "dropdown-item" %>
+        <%= link_to "All Artists", root_path, class: "dropdown-item", style:"font-size:30px;" %>
       </div>
     </div>
   </div>
+
+  <br>
 
   <style type="text/css">
     #map { height: 400px;
@@ -126,10 +128,10 @@
             <div class="card-text" style="margin-bottom:10px;">
               <%= art.artist.country %>, <%= art.artist.birth %> - <%= art.artist.death %>
             </div>
-            <%= link_to "Image", art.image_link, :target=>["_blank"], style: "text-decoration: none;" %>　
-            <%= link_to "Google Maps", art.location_link, :target=>["_blank"], style: "text-decoration: none;" %>　
-            <%= link_to "Street View", art.view_link, :target=>["_blank"], style: "text-decoration: none;" %>
-            <br>
+            <div class="row">
+              <%= link_to "Google Maps", art.location_link, :target=>["_blank"], class:"col-sm-5 offset-sm-1 btn btn-primary", style: "text-decoration:none; font-size:20px;" %>
+              <%= link_to "Street View", art.view_link, :target=>["_blank"], class:"col-sm-4 offset-sm-1 btn btn-primary", style: "text-decoration:none; font-size:20px;" %>
+            </div>
             <!-- <div class="d-flex justify-content-between align-items-center" style="margin-top:10px;">
               <div class="btn-group">
                 <%= link_to 'Show', art, class: "btn btn-sm btn-outline-secondary" %>
