--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -59,28 +59,28 @@
 
 
   <div class="row">
-    <div class="btn-group col-sm-3">
-      <button type="button" class="btn btn-outline-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <div class="btn-group col-sm-4">
+      <button type="button" class="btn btn-outline-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="font-size:30px;">
         <%= @artist.name %>
       </button>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
         <% @artists.each do |artist| %>
-          <%= link_to artist.name, artist_path(artist), class: "dropdown-item" %>
+          <%= link_to artist.name, artist_path(artist), class: "dropdown-item", style:"font-size:30px;" %>
         <% end %>
         <div class="dropdown-divider"></div>
-        <%= link_to "All Artists", root_path, class: "dropdown-item" %>
+        <%= link_to "All Artists", root_path, class: "dropdown-item", style:"font-size:30px;" %>
       </div>
     </div>
 
-    <div class="col-sm-2" style="margin-top:7px;">
+    <div class="col-sm-2" style="margin-top:7px; font-size:30px;">
       <%= @artist.country %>
     </div>
 
-    <div class="col-sm-2" style="margin-top:7px;">
+    <div class="col-sm-3" style="margin-top:7px; font-size:30px;">
       <%= @artist.birth %> - <%= @artist.death %>
     </div>
 
-    <div class="col-sm-2" style="margin-top:7px;">
+    <div class="col-sm-2" style="margin-top:7px; font-size:30px;">
       <%= link_to 'Edit', edit_artist_path(@artist), style: "color:gray; text-decoration:none;"  %>
     </div>
   </div>
@@ -111,24 +111,24 @@
     <% @arts.each do |art| %>
       <div class="col-lg-4" style="margin-top:20px;">
         <div class="card mb-4 shadow-sm">
-          <%= link_to art, style: "background-color: white;" do %>
+          <%= link_to art do %>
             <%= image_tag art.image.to_s, class: "card-img-top" %>
           <% end %>
           <div class="card-body">
-            <div class="card-text" style="font-size:25px;">
-              <%= link_to art.title, art, style: "text-decoration: none;" %>
+            <div class="offset-sm-1">
+              <div class="card-text" style="font-size:25px;">
+                <%= link_to art.title, art, style: "text-decoration: none;" %>
+              </div>
+              <div class="card-text"><%= art.year %></div>
+              <div class="card-text" style="font-size:20px;margin-top:5px;">
+                <%= link_to art.artist.name, artist_path(art.artist), style: "text-decoration: none;" %>
+              </div>
+              <div class="card-text" style="margin-bottom:10px;">
+                <%= art.artist.country %>, <%= art.artist.birth %> - <%= art.artist.death %>
+              </div>
             </div>
-            <div class="card-text"><%= art.year %></div>
-            <div class="card-text" style="font-size:20px;margin-top:5px;">
-              <%= link_to art.artist.name, artist_path(art.artist), style: "text-decoration: none;" %>
-            </div>
-            <div class="card-text" style="margin-bottom:10px;">
-              <%= art.artist.country %>, <%= art.artist.birth %> - <%= art.artist.death %>
-            </div>
-            <%= link_to "Image", art.image_link, :target=>["_blank"], style: "text-decoration: none;" %>　
-            <%= link_to "Google Maps", art.location_link, :target=>["_blank"], style: "text-decoration: none;" %>　
-            <%= link_to "Street View", art.view_link, :target=>["_blank"], style: "text-decoration: none;" %>
-            <br>
+            <%= link_to "Google Maps", art.location_link, :target=>["_blank"], class:"col-sm-5 offset-sm-1 btn btn-primary", style: "text-decoration:none; font-size:20px;" %>
+            <%= link_to "Street View", art.view_link, :target=>["_blank"], class:"col-sm-4 offset-sm-1 btn btn-primary", style: "text-decoration:none; font-size:20px;" %>
             <!-- <div class="d-flex justify-content-between align-items-center" style="margin-top:10px;">
               <div class="btn-group">
                 <%= link_to 'Show', art, class: "btn btn-sm btn-outline-secondary" %>
