--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -59,7 +59,7 @@
 
 
   <div class="row">
-    <div class="btn-group col-sm-4">
+    <div class="btn-group col-md-4">
       <button type="button" class="btn btn-outline-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="font-size:30px;">
         <%= @artist.name %>
       </button>
@@ -72,15 +72,15 @@
       </div>
     </div>
 
-    <div class="col-sm-2" style="margin-top:7px; font-size:30px;">
+    <div class="col-md-3" style="margin-top:7px; font-size:30px;">
       <%= @artist.country %>
     </div>
 
-    <div class="col-sm-3" style="margin-top:7px; font-size:30px;">
+    <div class="col-md-3" style="margin-top:7px; font-size:30px;">
       <%= @artist.birth %> - <%= @artist.death %>
     </div>
 
-    <div class="col-sm-2" style="margin-top:7px; font-size:30px;">
+    <div class="col-md-2" style="margin-top:7px; font-size:30px;">
       <%= link_to 'Edit', edit_artist_path(@artist), style: "color:gray; text-decoration:none;"  %>
     </div>
   </div>
