--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -47,7 +47,7 @@
 
 <p id="notice"><%= notice %></p>
 
-<div class="container-fluid" style="width:90%;">
+<div class="container-fluid pc-width">
   <div class="row">
     <div class="col-lg-12" style="font-size:30px;">
       <h1>My Favorite Paintings' Location & Street View</h1>
@@ -106,11 +106,11 @@
 </div>
 <br>
 
-<div class="container-fluid" style="width:90%;">
+<div class="container-fluid mt-3 pc-width">
   <div class="row">
     <% @arts.each do |art| %>
-      <div class="col-lg-4" style="margin-top:20px;">
-        <div class="card mb-4 shadow-sm">
+      <div class="col-lg-4 mb-4 prl-0">
+        <div class="card border-0px">
           <%= link_to art do %>
             <%= image_tag art.image.to_s, class: "card-img-top" %>
           <% end %>
