--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -57,12 +57,10 @@
 
 
 
-
-
 <p id="notice"><%= notice %></p>
 
 
-<div class="container-fluid" style="width:90%;">
+<div class="container-fluid pc-width">
   <div class="row">
     <div class="col-lg-12">
       <h1>My Favorite Paintings' Location & Street View</h1>
@@ -107,11 +105,11 @@
 </div>
 <br>
 
-<div class="container-fluid" style="width:90%;">
+<div class="container-fluid mt-3 pc-width">
   <div class="row">
     <% @arts.each do |art| %>
-      <div class="col-lg-4" style="margin-top:20px;">
-        <div class="card">
+      <div class="col-lg-4 mb-4 prl-0">
+        <div class="card border-0px">
           <%= link_to art do %>
             <%= image_tag art.image.to_s, class: "card-img-top" %>
           <% end %>
@@ -124,7 +122,7 @@
               <div class="card-text" style="font-size:20px;margin-top:5px;">
                 <%= link_to art.artist.name, artist_path(art.artist), style: "text-decoration: none;" %>
               </div>
-              <div class="card-text" style="margin-bottom:10px;">
+              <div class="card-text mb-3">
                 <%= art.artist.country %>, <%= art.artist.birth %> - <%= art.artist.death %>
               </div>
             </div>
