mobile map size modified

--- a/app/views/arts/show.html.erb
+++ b/app/views/arts/show.html.erb
@@ -88,14 +88,7 @@
 
 <br>
 
-  <style type="text/css">
-    #map { height: 400px;
-      margin-left:auto;
-      margin-right:auto;
-      text-align:left;
-      width: 100%;}
-  </style>
   <div class="row">
-    <div id="map" class="pc-mb"></div>
+    <div id="map" class="pc-mb-20px map-height"></div>
   </div>
 </div>
